--- a/Samples/Schedule, Download, and Update Files from BIM 360/main.ipynb
+++ b/Samples/Schedule, Download, and Update Files from BIM 360/main.ipynb
@@ -5,11 +5,12 @@
    "id": "abe38391-5559-406a-b0b2-65d3717e1a3b",
    "metadata": {},
    "source": [
-    "# Using Python to Schedule Download and Update Files From BIM 360 \n",
+    "# CHANGE TITLE Using Python to Schedule Download and Update Files From BIM 360 \n",
     "\n",
-    "During projects, computer-aided design (CAD) and building information modeling (BIM) data may undergo frequent changes by civil engineers, architects, and CAD technicians. These changes create a need to keep other project team members informed for downstream decision-making. For example, project and asset managers need timely and centralized access to up-to-date data for tracking progress and resolving issues. By reducing the time spent integrating CAD and BIM content into 3D web scenes, GIS teams can better enable stakeholders to mitigate risks on projects.\n",
+    "This Jupyter notebook focuses on using Python to maintain and keeping downloaded files from BIM 360 up to date. The following demonstrates how to use Python and Flask to set up a Python script that can be scheduled to download updated BIM 360 files.\n",
     "\n",
-    "This Jupyter notebook focuses on using Python to maintain and keeping downloaded files from BIM 360 up to date. The following demonstrates how to use Python and Flask to set up a Python script that can be scheduled to download updated BIM 360 files."
+    "## Use case \n",
+    "During projects, computer-aided design (CAD) and building information modeling (BIM) data may undergo frequent changes by civil engineers, architects, and CAD technicians. These changes create a need to keep other project team members informed for downstream decision-making. For example, project and asset managers need timely and centralized access to up-to-date data for tracking progress and resolving issues. By reducing the time spent integrating CAD and BIM content into 3D web scenes, GIS teams can better enable stakeholders to mitigate risks on projects."
    ]
   },
   {
@@ -17,13 +18,12 @@
    "id": "c7b0c4c8-c1ed-4abd-9e9b-2642beb4a315",
    "metadata": {},
    "source": [
-    "## Prerequisite\n",
+    "## Requirements\n",
     "\n",
-    "Before continuing with the exercise, the user is expected to have used ArcGIS Pro to connect to BIM Cloud Connection to create an Autodesk Source File Manifest (ASFM) file. See https://pro.arcgis.com/en/pro-app/latest/help/data/cad/accessing-cad-data-from-cloud-connections.htm for more information. Please have an ASFM on disk before continuing with the exercise.\n",
-    "\n",
-    "The user is also expected to have basic familiarity using Python and a Jupyter notebook, as well as basic HTTP request knowledge.\n",
-    "\n",
-    "Additionally, please download the [Flask](https://pypi.org/project/Flask/) and [Requests](https://pypi.org/project/requests/) library using the following command: `python -m pip install flask requests`."
+    "- Before continuing with the exercise, the user is expected to have used ArcGIS Pro to connect to BIM Cloud Connection to create an Autodesk Source File Manifest (ASFM) file. See https://pro.arcgis.com/en/pro-app/latest/help/data/cad/accessing-cad-data-from-cloud-connections.htm for more information. \n",
+    "- Please have an ASFM on disk before continuing with the exercise.\n",
+    "- The user is also expected to have basic familiarity using Python and a Jupyter notebook, as well as basic HTTP request knowledge.\n",
+    "- Additionally, please download the [Flask](https://pypi.org/project/Flask/) and [Requests](https://pypi.org/project/requests/) library using the following command: `python -m pip install flask requests`."
    ]
   },
   {
