--- a/Samples/Schedule, Download, and Update Files from BIM 360/main.ipynb
+++ b/Samples/Schedule, Download, and Update Files from BIM 360/main.ipynb
@@ -31,7 +31,9 @@
    "id": "535bc490-db29-4e53-a1a8-9625508a6234",
    "metadata": {},
    "source": [
-    "## Step 1: Register an Application with Autodesk Platform Service\n",
+    "## How to use the sample \n",
+    "\n",
+    "### Step 1: Register an Application with Autodesk Platform Service\n",
     "\n",
     "The first step is to register a web app Autodesk Platform Service (APS). \n",
     "\n",
