--- a/Samples/Schedule, Download, and Update Files from BIM 360/main.ipynb
+++ b/Samples/Schedule, Download, and Update Files from BIM 360/main.ipynb
@@ -47,7 +47,7 @@
    "id": "f270e92d-5a53-43ec-809c-b958069c699b",
    "metadata": {},
    "source": [
-    "## Step 2: Authenticate with APS to exchange for an access token\n",
+    "### Step 2: Authenticate with APS to exchange for an access token\n",
     "\n",
     "The next step is to perform 3-legged authentication with APS for an authentication code and exchange the code for an access token. The following code setups a Flask application to authenticate with APS."
    ]
@@ -173,7 +173,7 @@
    "id": "88c90dde-91ff-4930-bd16-a0f775f135ad",
    "metadata": {},
    "source": [
-    "## Step 3: Create a function to check for updates from BIM 360\n",
+    "### Step 3: Create a function to check for updates from BIM 360\n",
     "\n",
     "To check if a file has been updated on BIM 360, you will need the `project_id`, `item_id` and the current version of the file on disk. All required information is stored inside an Autodesk Source File Manifest (ASFM) file on disk. The following demonstrates how to open an existing ASFM file and retrieve the `project_id`, `item_id`, and current version of the file.\n",
     "\n",
@@ -285,7 +285,7 @@
    "id": "2c4fc979-56b1-420a-8806-e09469b94c87",
    "metadata": {},
    "source": [
-    "## Step 4: Create a function to download file from BIM 360\n",
+    "### Step 4: Create a function to download file from BIM 360\n",
     "\n",
     "If BIM 360 has a newer versioned file, then you will need to download the file from BIM 360. The following shows how to retrieve the item metadata using the `project_id`, `item_id`, and `access_token`."
    ]
@@ -429,7 +429,7 @@
    "id": "1d3548f1-2722-4092-ba11-49b6e6870419",
    "metadata": {},
    "source": [
-    "## Step 5 (final): Create and schedule a Python script to automatically update downloaded BIM 360 files\n",
+    "### Step 5 (final): Create and schedule a Python script to automatically update downloaded BIM 360 files\n",
     "\n",
     "This is the final step to creating a Python script that can download updated BIM 360 files from APS. We can combine the Python functions at the end of Step 3 and Step 4 to generate a Python script, like the one seen below:\n"
    ]
@@ -557,7 +557,7 @@
    "id": "58910caa-884f-4722-a67c-15da95436870",
    "metadata": {},
    "source": [
-    "## Appendix A\n",
+    "### Appendix A\n",
     "\n",
     "Access tokens can expire. If expired, you can use the authentication code and refresh token to request a new access token. Strategies to ensure the access token is unexpired are outside the scope of this Jupyter notebook, but the refresh token and the authentication code can be used to exchange for a new access token and refresh token as demonstrated below:"
    ]
