--- a/Samples/Schedule, Download, and Update Files from BIM 360/main.ipynb
+++ b/Samples/Schedule, Download, and Update Files from BIM 360/main.ipynb
@@ -5,9 +5,9 @@
    "id": "abe38391-5559-406a-b0b2-65d3717e1a3b",
    "metadata": {},
    "source": [
-    "# CHANGE TITLE Using Python to Schedule Download and Update Files From BIM 360 \n",
+    "# Updating ACC Files \n",
     "\n",
-    "This Jupyter notebook focuses on using Python to maintain and keeping downloaded files from BIM 360 up to date. The following demonstrates how to use Python and Flask to set up a Python script that can be scheduled to download updated BIM 360 files.\n",
+    "This Jupyter notebook focuses on using Python to maintain and keeping downloaded files from BIM 360 up-to-date. The following demonstrates how to use Python and Flask to set up a Python script that can be scheduled to download updated BIM 360 files.\n",
     "\n",
     "## Use case \n",
     "During projects, computer-aided design (CAD) and building information modeling (BIM) data may undergo frequent changes by civil engineers, architects, and CAD technicians. These changes create a need to keep other project team members informed for downstream decision-making. For example, project and asset managers need timely and centralized access to up-to-date data for tracking progress and resolving issues. By reducing the time spent integrating CAD and BIM content into 3D web scenes, GIS teams can better enable stakeholders to mitigate risks on projects."
