--- a/Samples/Updating ACC Files/UpdatingACCFiles.ipynb
+++ b/Samples/Updating ACC Files/UpdatingACCFiles.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Updating ACC Files \n",
     "\n",
-    "This Jupyter notebook focuses on using Python to maintain and keeping downloaded files from BIM 360 up-to-date. The following demonstrates how to use Python and Flask to set up a Python script that can be scheduled to download updated BIM 360 files.\n",
+    "This Jupyter Notebook focuses on using Python to maintain and keeping downloaded files from BIM 360 up-to-date. The following demonstrates how to use Python and Flask to set up a Python script that can be scheduled to download updated BIM 360 files.\n",
     "\n",
     "## Use case \n",
     "During projects, computer-aided design (CAD) and building information modeling (BIM) data may undergo frequent changes by civil engineers, architects, and CAD technicians. These changes create a need to keep other project team members informed for downstream decision-making. For example, project and asset managers need timely and centralized access to up-to-date data for tracking progress and resolving issues. By reducing the time spent integrating CAD and BIM content into 3D web scenes, GIS teams can better enable stakeholders to mitigate risks on projects."
@@ -22,7 +22,7 @@
     "\n",
     "- Before continuing with the exercise, the user is expected to have used ArcGIS Pro to connect to BIM Cloud Connection to create an Autodesk Source File Manifest (ASFM) file. See https://pro.arcgis.com/en/pro-app/latest/help/data/cad/accessing-cad-data-from-cloud-connections.htm for more information. \n",
     "- Please have an ASFM on disk before continuing with the exercise.\n",
-    "- The user is also expected to have basic familiarity using Python and a Jupyter notebook, as well as basic HTTP request knowledge.\n",
+    "- The user is also expected to have basic familiarity using Python and a Jupyter Notebook, as well as basic HTTP request knowledge.\n",
     "- Additionally, please download the [Flask](https://pypi.org/project/Flask/) and [Requests](https://pypi.org/project/requests/) library using the following command: `python -m pip install flask requests`."
    ]
   },
@@ -559,7 +559,7 @@
    "source": [
     "### Appendix A\n",
     "\n",
-    "Access tokens can expire. If expired, you can use the authentication code and refresh token to request a new access token. Strategies to ensure the access token is unexpired are outside the scope of this Jupyter notebook, but the refresh token and the authentication code can be used to exchange for a new access token and refresh token as demonstrated below:"
+    "Access tokens can expire. If expired, you can use the authentication code and refresh token to request a new access token. Strategies to ensure the access token is unexpired are outside the scope of this Jupyter Notebook, but the refresh token and the authentication code can be used to exchange for a new access token and refresh token as demonstrated below:"
    ]
   },
   {
