Rename and updates

--- a/Samples/Create and Update Building SLPK/BIM_To_BSLPK.ipynb
+++ b/Samples/Create and Update Building SLPK/BIM_To_BSLPK.ipynb
@@ -4,16 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stage 1"
+    "# Create and Update Building SLPK\n",
+    "\n",
+    "This sample WHAT DOES IT DO\n",
+    "\n",
+    "After following the steps in the Jupyter Notebook, you can automate the sharing of building scene layers to ArcGIS Online, minimizing production time with the most up-to-date project data required by the stakeholder.\n",
+    "\n",
+    "## Use case\n",
+    "U\n",
+    "\n",
+    "### Requirements\n",
+    "\n",
+    "- Ensure that the model(s) are already georeferenced.\n",
+    "- Sign in to an ArcGIS Online or ArcGIS Enterprise organization.\n",
+    "- Optionally, read this blog for an overview of the Notebook: [Automating BIM Data Publishing for ArcGIS: From Design to Digital Twin](https://www.esri.com/arcgis-blog/products/arcgis-online/aec/automating-bim-data-publishing-for-arcgis-from-design-to-digital-twin).\n",
+    " - Optionally, download the [sample data](https://www.arcgis.com/home/item.html?id=46dec36f758b45bba7fb195529faf17f) referenced in the blog. \n",
+    "\n",
+    "\n",
+    "## How to use the sample\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
-    "## Publish Building Scene Layer"
+    "## Stage 1: Publish Building Scene Layer"
    ]
   },
   {
@@ -307,14 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stage 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Replace the prior version of the Building Scene Layer"
+    "## Stage 2: Replace the prior version of the Building Scene Layer"
    ]
   },
   {
