--- a/Samples/Create and Update Building SLPK/BIM_To_BSLPK.ipynb
+++ b/Samples/Create and Update Building SLPK/BIM_To_BSLPK.ipynb
@@ -13,7 +13,7 @@
     "## Use case\n",
     "U\n",
     "\n",
-    "### Requirements\n",
+    "## Requirements\n",
     "\n",
     "- Ensure that the model(s) are already georeferenced.\n",
     "- Sign in to an ArcGIS Online or ArcGIS Enterprise organization.\n",
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Stage 1: Publish Building Scene Layer"
+    "### Stage 1: Publish Building Scene Layer"
    ]
   },
   {
@@ -38,7 +38,7 @@
     "hidden": true
    },
    "source": [
-    "### Import Packages"
+    "#### Import Packages"
    ]
   },
   {
@@ -62,7 +62,7 @@
     "hidden": true
    },
    "source": [
-    "### Define Variables"
+    "#### Define Variables"
    ]
   },
   {
@@ -126,7 +126,7 @@
     "hidden": true
    },
    "source": [
-    "### Export the BIM file Workspace into a Feature Dataset"
+    "#### Export the BIM file Workspace into a Feature Dataset"
    ]
   },
   {
@@ -189,7 +189,7 @@
     "hidden": true
    },
    "source": [
-    "### Create Temporary Building Layer from the Feature Dataset"
+    "#### Create Temporary Building Layer from the Feature Dataset"
    ]
   },
   {
@@ -220,7 +220,7 @@
     "hidden": true
    },
    "source": [
-    "### Create a Building Scene Layer Package"
+    "#### Create a Building Scene Layer Package"
    ]
   },
   {
@@ -251,7 +251,7 @@
     "hidden": true
    },
    "source": [
-    "### Share the Package as a Building Scene Layer (hosted)"
+    "#### Share the Package as a Building Scene Layer (hosted)"
    ]
   },
   {
@@ -357,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define Variables"
+    "#### Define Variables"
    ]
   },
   {
@@ -374,7 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Replace Web Layer"
+    "#### Replace Web Layer"
    ]
   },
   {
