--- a/Samples/Create and Update Building SLPK/BIM_To_BSLPK.ipynb
+++ b/Samples/Create and Update Building SLPK/BIM_To_BSLPK.ipynb
@@ -17,11 +17,11 @@
     "\n",
     "- Ensure that the model(s) are already georeferenced.\n",
     "- Sign in to an ArcGIS Online or ArcGIS Enterprise organization.\n",
-    "- Optionally, read this blog for an overview of the Notebook: [Automating BIM Data Publishing for ArcGIS: From Design to Digital Twin](https://www.esri.com/arcgis-blog/products/arcgis-online/aec/automating-bim-data-publishing-for-arcgis-from-design-to-digital-twin).\n",
-    " - Optionally, download the [sample data](https://www.arcgis.com/home/item.html?id=46dec36f758b45bba7fb195529faf17f) referenced in the blog. \n",
     "\n",
     "\n",
-    "## How to use the sample\n"
+    "\n",
+    "## How to use the sample\n",
+    "For an overview of the Notebook, read this blog: [Automating BIM Data Publishing for ArcGIS: From Design to Digital Twin](https://www.esri.com/arcgis-blog/products/arcgis-online/aec/automating-bim-data-publishing-for-arcgis-from-design-to-digital-twin). Optionally, download the [sample data](https://www.arcgis.com/home/item.html?id=46dec36f758b45bba7fb195529faf17f) referenced in the blog. \n"
    ]
   },
   {
