--- a/Samples/Update ACC Files/UpdateACCFiles.ipynb
+++ b/Samples/Update ACC Files/UpdateACCFiles.ipynb
@@ -5,7 +5,7 @@
    "id": "abe38391-5559-406a-b0b2-65d3717e1a3b",
    "metadata": {},
    "source": [
-    "# Updating ACC Files \n",
+    "# Update ACC Files \n",
     "\n",
     "This Jupyter Notebook focuses on using Python to maintain and keeping downloaded files from BIM 360 up-to-date. The following demonstrates how to use Python and Flask to set up a Python script that can be scheduled to download updated BIM 360 files.\n",
     "\n",
