--- a/Samples/Share and Update Building SLPK/ShareAndUpdateBSLPK.ipynb
+++ b/Samples/Share and Update Building SLPK/ShareAndUpdateBSLPK.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create and Update Building SLPK\n",
+    "# Share and Update Building SLPK\n",
     "\n",
-    "This sample WHAT DOES IT DO\n",
+    "This sample WHAT DOES IT DO. Double check if does multiple SLPKs\n",
     "\n",
     "After following the steps in the Jupyter Notebook, you can automate the sharing of building scene layers to ArcGIS Online, minimizing production time with the most up-to-date project data required by the stakeholder.\n",
     "\n",
