--- a/Samples/Share and Update Building SLPK/ShareAndUpdateBSLPK.ipynb
+++ b/Samples/Share and Update Building SLPK/ShareAndUpdateBSLPK.ipynb
@@ -11,14 +11,12 @@
    "source": [
     "# Share and Update Building SLPK\n",
     "\n",
-    "This sample WHAT DOES IT DO. Double check if does multiple SLPKs\n",
+    "This sample shares and updates one or more building SLPKs to ArcGIS Online. \n",
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
-    "After following the steps in the Jupyter Notebook, you can automate the sharing of building scene layers to ArcGIS Online, minimizing production time with the most up-to-date project data required by the stakeholder.\n",
-    "\n",
     "## Use case\n",
-    "U\n",
+    "Minimize production time with the most up-to-date project data required by the stakeholder.\n",
     "\n",
     "## Requirements\n",
     "\n",
