--- a/Samples/Share and Update Building SLPK/ShareAndUpdateBSLPK.ipynb
+++ b/Samples/Share and Update Building SLPK/ShareAndUpdateBSLPK.ipynb
@@ -11,12 +11,12 @@
    "source": [
     "# Share and Update Building SLPK\n",
     "\n",
-    "This sample shares and updates one or more building SLPKs to ArcGIS Online. \n",
+    "This sample shares and updates a building SLPK to ArcGIS Online. \n",
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
     "## Use case\n",
-    "Minimize production time with the most up-to-date project data required by the stakeholder.\n",
+    "Stakeholders would like to see the development of a building project at different stages in a web scene. In order to keep stakeholders updated on the project progress, the information they have access to must be updated. Automating the sharing of building scene layers to ArcGIS Online minimizes production time with the most up-to-date project data required by the stakeholder. \n",
     "\n",
     "## Requirements\n",
     "\n",
