--- a/Samples/Share and Update Building SLPK/ShareAndUpdateBSLPK.ipynb
+++ b/Samples/Share and Update Building SLPK/ShareAndUpdateBSLPK.ipynb
@@ -16,7 +16,7 @@
     "![BSLPK2.png](attachment:BSLPK2.png)\n",
     "\n",
     "## Use case\n",
-    "Stakeholders would like to see the development of a building project at different stages in a web scene. In order to keep stakeholders updated on the project progress, the information they have access to must be updated. Automating the sharing of building scene layers to ArcGIS Online minimizes production time with the most up-to-date project data required by the stakeholder. \n",
+    "Stakeholders would like to see the development of a building project at different stages in a web scene in order to keep stakeholders updated at different stages of a building project. This sample shows how to automate the sharing of building scene layers to ArcGIS Online, minimizing production time. \n",
     "\n",
     "## Requirements\n",
     "\n",
