--- a/Samples/Share and Update Building SLPK/ShareAndUpdateBSLPK.ipynb
+++ b/Samples/Share and Update Building SLPK/ShareAndUpdateBSLPK.ipynb
@@ -16,7 +16,7 @@
     "![BSLPK2.png](attachment:BSLPK2.png)\n",
     "\n",
     "## Use case\n",
-    "To keep stakeholders updated at different stages of the project, this sample shows how to minimize production time by automating the update of previously-shared building scene layers. \n",
+    "To keep stakeholders updated at different stages of the project, this sample shows how to minimize production time by automating the update of a previously-shared building scene layer. \n",
     "\n",
     "## Requirements\n",
     "\n",
