--- a/Samples/Update ACC Files/UpdateACCFiles.ipynb
+++ b/Samples/Update ACC Files/UpdateACCFiles.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Download Updated Content from Autodesk Construction Cloud \n",
     "\n",
-    "This Jupyter Notebook focuses on using Python to maintain and keeping downloaded files from Autodesk Construction Cloud (ACC) up-to-date. The following demonstrates how to use Python and Flask to set up a Python script that can be scheduled to download updated ACC files.\n",
+    "This Jupyter Notebook uses Python to maintain and keep downloaded files from Autodesk Construction Cloud (ACC) up-to-date. The following demonstrates how to use Python and Flask to set up a Python script that can be scheduled to download updated ACC files.\n",
     "\n",
     "## Use case \n",
     "During projects, computer-aided design (CAD) and building information modeling (BIM) data may undergo frequent changes by civil engineers, architects, and CAD technicians. These changes create a need to keep other project team members informed for downstream decision-making. For example, project and asset managers need timely and centralized access to up-to-date data for tracking progress and resolving issues. By reducing the time spent integrating CAD and BIM content into 3D web scenes, GIS teams can better enable stakeholders to mitigate risks on projects."
