--- a/Samples/Update ACC Files/UpdateACCFiles.ipynb
+++ b/Samples/Update ACC Files/UpdateACCFiles.ipynb
@@ -10,7 +10,7 @@
     "This sample shows how to automate and schedule the refresh of content from Autodesk Construction Cloud (ACC) using Python and Flask.\n",
     "\n",
     "## Use case \n",
-    "During projects, computer-aided design (CAD) and building information modeling (BIM) data may undergo frequent changes by civil engineers, architects, and CAD technicians. These changes create a need to keep other project team members informed for downstream decision-making. For example, project and asset managers need timely and centralized access to up-to-date data for tracking progress and resolving issues. By reducing the time spent integrating CAD and BIM content into 3D web scenes, GIS teams can better enable stakeholders to mitigate risks on projects."
+    "Project and asset managers need timely access to up-to-date design data for tracking progress and resolving issues. The BIM Cloud Connection in ArcGIS Pro lets you download CAD and BIM content from ACC to include in your project. This sample lets you schedule automated refreshes for documents stored in ACC using Python and Flask."
    ]
   },
   {
