--- a/Samples/Update a Building Scene Layer/UpdateABuildingSceneLayer.ipynb
+++ b/Samples/Update a Building Scene Layer/UpdateABuildingSceneLayer.ipynb
@@ -9,7 +9,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Share and Update Building SLPK\n",
+    "# Update a Building Scene Layer\n",
     "\n",
     "This sample shares and updates a building SLPK to ArcGIS Online. \n",
     "\n",
