--- a/Samples/Update a Building Scene Layer/UpdateABuildingSceneLayer.ipynb
+++ b/Samples/Update a Building Scene Layer/UpdateABuildingSceneLayer.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "# Update a Building Scene Layer\n",
     "\n",
-    "This sample updates a building scene layer to ArcGIS Online. \n",
+    "Update a building scene layer to ArcGIS Online. \n",
     "\n",
     "![BSLPK2.png](attachment:BSLPK2.png)\n",
     "\n",
