--- a/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
+++ b/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
@@ -10,7 +10,7 @@
    "metadata": {},
    "source": [
     "# Improve the Exterior Shell of the Building Scene Layer\n",
-    "Clean the exterior shell and floor layers in a geodatabase, filtering and combining features as needed.\n",
+    "Improve the exterior shell and floor layers in a geodatabase, filtering and combining features as needed.\n",
     "![ExteriorShell1.png](attachment:ExteriorShell1.png)"
    ]
   },
