--- a/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
+++ b/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
@@ -10,7 +10,7 @@
    "metadata": {},
    "source": [
     "# Improve the Exterior Shell of the Building Scene Layer\n",
-    "Improve the exterior shell and floor layers in a geodatabase, filtering and combining features as needed.\n",
+    "This Notebook shows the sample as described in this blog: [Understand and improve the exterior shell of the building layer to support your digital twin](https://www.esri.com/arcgis-blog/products/arcgis-pro/3d-gis/understand-and-improve-the-exterior-shell-of-the-building-layer-to-support-your-digital-twin).\n",
     "![ExteriorShell1.png](attachment:ExteriorShell1.png)"
    ]
   },
