--- a/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
+++ b/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "## Use case\n",
-    "After combining multiple bim models into a single feature dataset, sometimes the exterior shell may include too much or not enough information. This sample shows how to remove unnecessary details and add some floor features that were excluded from the exterior shell. \n",   "\n",
+    "After combining multiple BIM models into a single feature dataset, the exterior shell may include too much or not enough information. This sample shows how to remove unnecessary details and add exterior features that were modeled as floors in the original BIM models to improve visualization in the Building Scene Layer. \n",   "\n",
     "## Requirements\n",
     "- Ensure that all models are already [georeferenced](https://www.esri.com/arcgis-blog/products/arcgis-pro/aec/geolocating-a-digital-model-revit-or-ifc-in-arcgis-pro).\n",
     "- Create a single dataset with all the relevant models, using the workflow in the [Combine multiple digital models into a single building scene layer](https://www.esri.com/arcgis-blog/products/arcgis-pro/aec/combine-multiple-digital-models-into-a-single-building-scene-layer) blog article.\n",
