--- a/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
+++ b/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
@@ -21,7 +21,7 @@
     "## Use case\n",
     "After combining multiple BIM models into a single feature dataset, the exterior shell may include too much or not enough information. This sample shows how to remove unnecessary details and add exterior features that were modeled as floors in the original BIM models to improve visualization in the Building Scene Layer. \n",   "\n",
     "## Requirements\n",
-    "- A single dataset created from multiple BIM models. For information on how to do this, check out: [Combine multiple digital models into a single building scene layer](https://www.esri.com/arcgis-blog/products/arcgis-pro/aec/combine-multiple-digital-models-into-a-single-building-scene-layer) blog article.\n",
+    "- A single dataset created from multiple BIM models. For information on how to do this, check out this blog: [Combine multiple digital models into a single building scene layer](https://www.esri.com/arcgis-blog/products/arcgis-pro/aec/combine-multiple-digital-models-into-a-single-building-scene-layer).\n",
     "\n",
     "## How to use the sample\n",
     "Read this blog for an overview of the script: [Understand and improve the exterior shell of the building layer to support your digital twin](https://www.esri.com/arcgis-blog/products/arcgis-pro/3d-gis/understand-and-improve-the-exterior-shell-of-the-building-layer-to-support-your-digital-twin). Adjust the code in the Jupyter Notebook as needed.\n"
