--- a/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
+++ b/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
@@ -24,7 +24,7 @@
     "- A single dataset created from multiple BIM models. For information on how to do this, check out this blog: [Combine multiple digital models into a single building scene layer](https://www.esri.com/arcgis-blog/products/arcgis-pro/aec/combine-multiple-digital-models-into-a-single-building-scene-layer).\n",
     "\n",
     "## How to use the sample\n",
-    "For for detail on the script, check out this blog: [Understand and improve the exterior shell of the building layer to support your digital twin](https://www.esri.com/arcgis-blog/products/arcgis-pro/3d-gis/understand-and-improve-the-exterior-shell-of-the-building-layer-to-support-your-digital-twin). Download the Jupyter Notebook and adjust the code as needed.\n"
+    "For for detail on the script, check out this blog: [Understand and improve the exterior shell of the building layer to support your digital twin](https://www.esri.com/arcgis-blog/products/arcgis-pro/3d-gis/understand-and-improve-the-exterior-shell-of-the-building-layer-to-support-your-digital-twin). Download this Jupyter Notebook and adjust the code as needed.\n"
    ]
   },
   {
