--- a/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
+++ b/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 2: Create a temporary layer for processing\n",
+    "#### Step 2: Create a temporary exterior shell layer\n",
     "\n",
     "Make a temporary, in-memory feature layer from the exterior shell feature class."
    ]
