--- a/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
+++ b/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 2: Create a temporary exterior shell layer\n",
+    "#### Step 2: Create a working exterior shell layer\n",
     "\n",
     "Make a temporary, in-memory feature layer from the exterior shell feature class."
    ]
@@ -80,9 +80,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 3: Select elements to exclude from the exterior shell\n",
+    "#### Step 3: Define a where clause to omit models from the working exterior shell layer.\n",
     "\n",
-    "Filter out features based on the 'DocName' field."
+    "Define a where clause based on the DocName field to omit models that aren't needed in the exterior shell."
    ]
   },
   {
