--- a/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
+++ b/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
@@ -122,9 +122,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 4: Create a temporary exterior shell feature class\n",
+    "#### Step 4: Create a new exterior shell feature class\n",
     "\n",
-    "Copy the selected features to a new temporary feature class for further processing."
+    "Copy the selected features to a new feature class for further processing."
    ]
   },
   {
