--- a/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
+++ b/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 5: Add missing floor elements\n",
+    "#### Step 5: Add additional elements from the floor feature class\n",
     "\n",
     "Select specific floor levels and append them to the temporary exterior shell feature class."
    ]
