--- a/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
+++ b/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
@@ -147,7 +147,7 @@
    "source": [
     "#### Step 5: Add additional elements from the floor feature class\n",
     "\n",
-    "Select specific floor levels and append them to the temporary exterior shell feature class."
+    "Select specific floor elements based on building level name to append to the working exterior shell feature class."
    ]
   },
   {
