--- a/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
+++ b/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
@@ -187,13 +187,16 @@
     "arcpy.management.Append(inputs=working_floors_layer, target=temp_fc, schema_type=\"NO_TEST\")"
    ]
   },
+
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace the original exterior shell feature class with the updated one\n",
+    "#### Step 6: Replace the original exterior shell\n",
+    "\n",
+    "Replace the original exterior shell feature class with the updated one."
     "if arcpy.Exists(exteriorshell_fc):\n",
     "    arcpy.Delete_management(exteriorshell_fc)\n",
     "    arcpy.AddMessage('Exterior Shell Layer Deleted')\n",
@@ -206,7 +209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 6: Cleanup (optional)\n",
+    "#### Step 7: Cleanup (optional)\n",
     "\n",
     "Optionally, delete temporary layers to keep the workspace clean."
    ]
