--- a/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
+++ b/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
@@ -19,7 +19,8 @@
    "metadata": {},
    "source": [
     "## Use case\n",
-    "After combining multiple BIM models into a single feature dataset, the exterior shell may include too much or not enough information. This sample shows how to remove unnecessary details and add exterior features that were modeled as floors in the original BIM models to improve visualization in the Building Scene Layer. \n",   "\n",
+    "After combining multiple BIM models into a single feature dataset, the exterior shell may include too much or not enough information. This sample shows how to remove unnecessary details and add exterior features that were modeled as floors in the original BIM models to improve visualization in the Building Scene Layer. \n",
+    "\n",
     "## Requirements\n",
     "- A single dataset created from multiple BIM models. For information on how to do this, check out this blog: [Combine multiple digital models into a single building scene layer](https://www.esri.com/arcgis-blog/products/arcgis-pro/aec/combine-multiple-digital-models-into-a-single-building-scene-layer).\n",
     "\n",
@@ -185,6 +186,15 @@
     "# Select floor features based on the where clause and append to temp_fc\n",
     "arcpy.management.SelectLayerByAttribute(working_floors_layer, \"NEW_SELECTION\", floors_where_clause)\n",
     "arcpy.management.Append(inputs=working_floors_layer, target=temp_fc, schema_type=\"NO_TEST\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Step 6: Replace the original exterior shell\n",
+    "\n",
+    "Replace the original exterior shell feature class with the updated one. "
    ]
   },
   {
