--- a/Samples/Update a Building Scene Layer/UpdateABuildingSceneLayer.ipynb
+++ b/Samples/Update a Building Scene Layer/UpdateABuildingSceneLayer.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "\n",
     "## How to use the sample\n",
-    "For an overview of the notebook, read this blog: [Automating BIM Data Publishing for ArcGIS: From Design to Digital Twin](https://www.esri.com/arcgis-blog/products/arcgis-online/aec/automating-bim-data-publishing-for-arcgis-from-design-to-digital-twin). Optionally, download the [sample data](https://www.arcgis.com/home/item.html?id=46dec36f758b45bba7fb195529faf17f) referenced in the blog. \n"
+    "For an overview of the notebook, check out this blog: [Automating BIM Data Publishing for ArcGIS: From Design to Digital Twin](https://www.esri.com/arcgis-blog/products/arcgis-online/aec/automating-bim-data-publishing-for-arcgis-from-design-to-digital-twin). Optionally, download the [sample data](https://www.arcgis.com/home/item.html?id=46dec36f758b45bba7fb195529faf17f) referenced in the blog. \n"
    ]
   },
   {
